--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^0.27.2",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "core-js": "^3.6.5",
+    "vant": "^2.5.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -30,6 +34,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
+    "postcss-pxtorem": "^5.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
@@ -40,5 +45,8 @@
       "vue-cli-service lint",
       "git add"
     ]
-  }
+  },
+  "eslintIgnore": [
+    "iconfont.js"
+  ]
 }
