--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.3",
     "vant": "^2.5.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
