--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.3",
+    "json-bigint": "^1.0.0",
     "lodash": "^4.17.21",
     "vant": "^2.5.7",
     "vue": "^2.6.11",
